<resources>
    <string name="app_name">WallpaperAI</string>
    <string name="logo_alt">WallpaperAI Logo</string>

    <!-- ImageView Activity -->
    <string name="imageview_template_description">Your image description</string>
    <string name="imageview_template_content_description">Wallpaper/Widget image</string>
    <string name="imageview_button_set_wallpaper">Set wallpaper</string>
    <string name="imageview_button_back">Back to Library</string>

    <!-- Generate Activity -->
    <string name="generate_title1">Conjuring Pixels…</string>
    <string name="generate_title2">Patience, Picasso…</string>
    <string name="generate_title3">Art in the Making…</string>
    <string name="generate_title4">Painting with Algorithms…</string>
    <string name="generate_title5">Designing Dreams…</string>
    <string name="generate_title6">Sculpting Scenes…</string>
    <string name="generate_loading_icon_alt">Loading icon</string>

    <!-- Library Fragment -->
    <string name="library_nav_title">Library</string>
    <string name="library_title">Library</string>
    <string name="library_templates_title">Templates</string>
    <string name="library_templates_placeholder">Template wallpapers will show here.</string>
    <string name="library_wallpaper_title">Your Wallpapers</string>
    <string name="library_wallpaper_placeholder">Your created Wallpapers will show here.</string>
    <string name="library_widget_title">Your Widgets</string>
    <string name="library_widget_placeholder">Coming soon!</string>

    <!-- Create Fragment -->
    <string name="create_nav_title">Create</string>
    <string name="create_title">Create Wallpaper/Widget</string>
    <string name="create_input_title">What is inspiring you?</string>
    <string name="create_input_description">Describe your desired wallpaper/widget as best as you can. The AI will take over the rest.</string>
    <string name="create_button_wallpaper">Generate Wallpaper</string>
    <string name="create_button_widget">Generate Widget</string>

    <!-- Settings Fragment -->
    <string name="settings_nav_title">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_button_reset_apikey">Clear API Key</string>
    <string name="settings_button_set_apikey">Login with API Key</string>

    <!-- Help Fragment -->
    <string name="help_nav_title">Help</string>
    <string name="help_title">Help</string>
    <string name="help_question1">What is an API Key?</string>
    <string name="help_question1_answer">An API Key tells the AI who you are and that you are allowed to use it. Because this app uses OpenAI, you have to "login" into OpenAI. This is done via the API Key.</string>
    <string name="help_question2">Can I generate Images without an API Key?</string>
    <string name="help_question2_answer">No, sadly you can\'t. You have to provide an API Key for the AI to be able to generate images.</string>
    <string name="help_question3">I created a Widget, how can I use it?</string>
    <string name="help_question3_answer">Go to your home screen, edit it and then you should find a button somewhere to add Widgets. The generated Widget from WallpaperAI should be shown there.</string>

    <!-- Login Activity -->
    <string name="login_welcome_title">Welcome to WallpaperAI!</string>
    <string name="login_welcome_text">For WallpaperAI to function, it needs your API Key from OpenAI to generate Wallpapers. Make sure you have ChatGPT Plus, else it will not work.</string>
    <string name="login_welcome_button_more">I want to know more</string>
    <string name="login_input_title_apikey">API Key</string>
    <string name="login_input_description_apikey">Insert your OpenAI API Key here and then click the continue button below.</string>
    <string name="login_button_continue">Continue</string>
    <string name="login_button_skip">Skip this step</string>
</resources>