<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/login_top"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_image_logo"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/login_image_logo_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_alt"
                android:src="@mipmap/icon_notext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_top"
        app:layout_constraintVertical_bias="0.035">

        <TextView
            android:id="@+id/login_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/login_welcome_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_welcome_button_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/login_welcome_button_more"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/login_input_title_apikey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/input_text_apikey"
            android:text="@string/login_input_title_apikey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_text_apikey"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:autofillHints=""
            android:background="@drawable/input_text_background"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:text="" />

        <TextView
            android:id="@+id/login_input_description_apikey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/login_input_description_apikey" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button_continue"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/primary"
            android:onClick="onButtonContinue"
            android:text="@string/login_button_continue"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button_skip"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/secondary"
            android:onClick="onButtonSkip"
            android:text="@string/login_button_skip"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>