<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.LibraryPageFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/library_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_title"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/library_templates_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/library_templates_title"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/library_templates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/library_templates_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/library_templates_placeholder"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/library_wallpaper_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/library_wallpaper_title"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/library_wallpapers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/library_wallpaper_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/library_wallpaper_placeholder"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/library_widget_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/library_widget_title"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/library_widgets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/library_widget_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/library_widget_placeholder"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>