<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageViewActivity">


    <LinearLayout
        android:id="@+id/imageview_top"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageview_image_logo"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageview_image_logo_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_alt"
                android:src="@mipmap/icon_notext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/imageview_top_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_wallpaper"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imageview_template_content_description"
        app:layout_constraintBottom_toTopOf="@+id/imageview_template_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_top"
        app:layout_constraintVertical_bias="0.74"
        app:srcCompat="@drawable/baseline_image_24" />

    <TextView
        android:id="@+id/imageview_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:text="@string/imageview_template_description"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageview_button_set_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/primary"
        android:text="@string/imageview_button_set_wallpaper"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageview_button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_template_description"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageview_button_back"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/primary"
        android:text="@string/imageview_button_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>