<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.SettingsPageFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035">

        <TextView
            android:id="@+id/login_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settings_button_reset_apikey"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/destructive"
            android:text="@string/settings_button_reset_apikey"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settings_button_set_apikey"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/primary"
            android:text="@string/settings_button_set_apikey"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>