<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateActivity">


    <LinearLayout
        android:id="@+id/generate_top"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_image_logo"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/login_image_logo_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_alt"
                android:src="@mipmap/icon_notext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/generate_loading_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:gravity="center"
        android:text="@string/generate_title1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableBottomCompat="@drawable/loading_animation_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>